exports[`Client side render should start loading data if not loaded 1`] = `
Object {
  "data": undefined,
  "errorMessage": undefined,
  "isLoaded": false,
  "isLoading": true,
  "loadFailed": false,
  "renderCount": 2,
}
`;

exports[`Client side render should start loading data if not loaded 2`] = `
Object {
  "dataLoader": Object {
    "testDataType": Object {
      "testKey": Object {
        "failed": false,
        "loaded": false,
        "loading": true,
        "serverSideRender": true,
      },
    },
  },
}
`;

exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "data": undefined,
  "errorMessage": "Boom!",
  "isLoaded": false,
  "isLoading": false,
  "loadFailed": true,
  "renderCount": 3,
}
`;

exports[`server side render should pass failure when data load fails 2`] = `
Object {
  "dataLoader": Object {
    "testDataType": Object {
      "testKey": Object {
        "error": "Boom!",
        "failed": true,
        "loaded": false,
        "loading": false,
        "serverSideRender": true,
      },
    },
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "errorMessage": undefined,
  "isLoaded": true,
  "isLoading": false,
  "loadFailed": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass loaded data once promise resolves 2`] = `
Object {
  "dataLoader": Object {
    "testDataType": Object {
      "testKey": Object {
        "data": Object {
          "result": "Success!",
        },
        "failed": false,
        "loaded": true,
        "loading": false,
        "serverSideRender": true,
      },
    },
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "data": undefined,
  "errorMessage": undefined,
  "isLoaded": false,
  "isLoading": true,
  "loadFailed": false,
  "renderCount": 2,
}
`;

exports[`server side render should start loading data if not loaded 2`] = `
Object {
  "dataLoader": Object {
    "testDataType": Object {
      "testKey": Object {
        "failed": false,
        "loaded": false,
        "loading": true,
        "serverSideRender": true,
      },
    },
  },
}
`;
